--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-router-dom": "^7.1.1",
     "zod": "^3.24.1"
   },
